k8s-on-premise-cloud/kiali/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system  
spec:
  ingressClassName: nginx
  rules:
  - host: kiali.nhatanhmovieweb.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
